beaucoup d'amélioration (le jeu marche sans le roque, le en passant et le mouvement de 2 cases vers l'avant d'un pion)